Resolves: tdf#113615 wrong SwXShape from three possibilities returned

There is the group object itself and the two subobjects all registered
with this SwFrameFormat and the right line is randomly returned
instead of the wanted one.

Its possibly the presence of working a11y under gtk3 causing it to be
the only platform apparently with this trouble with a11y querying
for details of the grouped object

Change-Id: I4d1bd3f826b630dd7734eb1decaf0211cd896894